# master-django-channels

./: LICENSE  README.md  db.sqlite3  pyproject.toml
Pages/: chat_person.html  home.html  login.html  main.html  register.html
chat/: admin.py  consumers.py  consumers_back.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: chat_person.html  home.html  login.html  register.html
config/: asgi.py  settings.py  urls.py
